Used bulma CSS framework to style the html files.

--- a/src/AboutMe.html
+++ b/src/AboutMe.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta name="author" content="Natanim Kemal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/home.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="images/about.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <title>About me</title>
     <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
 </head>
 
-<body class="hero is-info">
-
+<body class="hero-body hero is-info has-text-black">
     <header class="navbar">
         <div class="container">
             <div class="navbar-brand">
@@ -54,49 +51,72 @@
             </div>
         </div>
     </header>
+    <main class="container mt-6">
+        <figure class="image">
+            <img src="images/placeholder.png" alt="my-image" width="80%">
+            <figcaption class="is-size-7 has-text-centered">Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit.
+            </figcaption>
+        </figure>
 
-    <main class="section main-content-home">
-        <article class="columns">
-            <div class="column is-half is-flex is-justify-content-center ">
-                <img class="image" src="images/profile.jpg" alt="my-photo">
-            </div>
+        <div class="columns mt-6">
             <div class="column">
-                <h2 class="title is-2">Hey there,</h2>
-                <h3 class="subtitle is-3">I am <span class="article-1__name">Natanim Kemal</span></h3>
-                <p class="article-1__description">Third-year Software Engineering student at Addis Ababa University,
-                    Ethiopia.</p>
+                <section>
+                    <h2 class="title is-4">My Journey</h2>
+                    <p class="content">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi aperiam officiis ad facere
+                        consequatur ipsa modi magnam sed cumque voluptatum inventore error maiores praesentium porro,
+                        velit quisquam placeat fugiat voluptates.
+                        Consectetur natus vero, odio cumque architecto non sed! Dolorem doloremque illo illum ad
+                        voluptate incidunt nihil tempora, tempore maxime, minima natus delectus aut sed inventore autem
+                        numquam nisi doloribus molestiae.
+                        Eligendi porro, fuga illum harum quam minus numquam autem, quaerat vel asperiores odit
+                        inventore alias
+                        Eligendi porro, fuga illum harum quam minus numquam autem, quaerat vel asperiores odit
+                        inventore alias
+                        Eligendi porro, fuga illum harum quam minus numquam autem, quaerat vel asperiores odit
+                        inventore alias
+                        perspiciatis laborum corporis nesciunt? Rerum cupiditate vel temporibus quo sequi doloribus?
+                        Mollitia,
+                        nulla. Fugit, magni
+                    </p>
+                </section>
             </div>
-        </article>
-        <hr class="horizontal--line">
-        <div>
-            <!-- Vertical line -->
-            <div class="column is-narrow nav-parent__line"></div>
-            <!-- Navigation section -->
-            <div class="column is-exanded has-text-centered">
-                <section class="nav-parent__section about">
-                    <h1 class="title is-2">About me</h1>
-                    <a href="AboutMe.html" class="nav-parent__link"><img src="images/caret-right_3916970.png"
-                            alt="forward-icon"></a>
+
+            <div class="column">
+                <section>
+                    <h2 class="title is-4">Hobbies</h2>
+                    <h4 class="subtitle is-6">Relatables</h4>
+                    <p class="content">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio perspiciatis deleniti,
+                        facilis,
+                        quod temporibus neque itaque, dolorem quisquam et ex voluptatibus veniam! Explicabo labore ipsa
+                        veritatis laboriosam eum fugit asperiores
+                    </p>
                 </section>
-                <section class="nav-parent__section portfolio">
-                    <h1 class="title is-2">Portfolio</h1>
-                    <a href="Portfolio.html" class="nav-parent__link"><img src="images/caret-right_3916970.png"
-                            alt="forward-icon"></a>
-                </section>
-                <section class="nav-parent__section contact">
-                    <h1 class="title is-2">Contact</h1>
-                    <a href="Contact.html" class="nav-parent__link"><img src="images/caret-right_3916970.png"
-                            alt="forward-icon"></a>
+
+                <section class="mt-6">
+                    <h2 class="title is-4">Goals</h2>
+                    <ul>
+                        <li>lorem ng ideas into tangible success</li>
+                        <!-- Add more list items as needed -->
+                    </ul>
                 </section>
             </div>
         </div>
+
+        <div class="box has-text-centered">
+            <h2 class="title is-4 has-text-centered">My Gallery</h2>
+            <a href="Gallery.html" class="button is-info is-rounded">*_*</a>
+        </div>
+
     </main>
 
-    <footer class="has-background-dark has-text-white">
-        <div class="content has-text-centered">
-            <small>Natanim Kemal | Dec, 2023</small>
-        </div>
-    </footer>
 </body>
+<footer class="has-background-dark has-text-white has-text-centered">
+    <p>
+        <small>Natanim Kemal | 2023</small>
+    </p>
+</footer>
 
 </html>
