--- a/src/Portfolio.html
+++ b/src/Portfolio.html
@@ -6,115 +6,117 @@
     <meta name="author" content="Natanim Kemal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="images/portfolio.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
 </head>
 
-<body>
-    <header>
-        <picture>
-            <svg width="30%" height="2%" version="1.0" viewBox="0 0 361 130" xmlns="http://www.w3.org/2000/svg">
-                <g transform="translate(0 130) scale(.1 -.1)">
-                    <path
-                        d="m1020 851v-371h365 365v360 360h-180-179l-3-131-3-130-170 132c-93 72-176 136-182 142-10 7-13-66-13-362z" />
-                    <path d="m1832 858c3-315 5-363 18-363s15 48 18 363c2 358 2 362-18 362s-20-4-18-362z" />
-                    <path
-                        d="m1952 858 3-363 353-3c193-1 352 0 352 3s-61 86-135 184l-134 179 111 149c61 81 122 163 136 181l24 32h-356-356l2-362z" />
-                    <path
-                        d="m668 205c-38-63-68-117-68-120s65-5 144-5h145l-70 118c-38 64-73 118-77 119-4 2-37-49-74-112z" />
-                    <path
-                        d="m1168 205c-38-63-68-117-68-120s119-5 265-5h265v115 115h-59-60l-3-40-3-39-52 39c-28 22-54 40-57 40s-7-51-8-112l-3-113-69 118c-38 64-72 117-75 117s-36-52-73-115z" />
-                    <path
-                        d="m1780 201v-121h120 120v121 120l-45-33c-25-18-52-37-59-42-10-7-27-1-56 20-90 64-80 72-80-65z" />
-                    <path
-                        d="m2630 201v-121h355 355v60 60h-30c-30 0-30    1-30 55v55h-60-59l-3-112-3-113-68 118c-38 64-72 117-76 117s-38-53-76-117l-70-118-3 117-3 118-50-40c-58-46-65-47-99-19-14 11-37 29-52 40l-28 20v-120z" />
-                    <path d="m360 196v-116h115 115v115 115h-60-60v-41-41l-42 34c-72 58-68 62-68-66z" />
-                    <path
-                        d="m882 253c3-54 5-58 26-55s22 0 22-57v-61h60 60v61c0 56 2 61 20 56s20 0 20 54v59h-105-106l3-57z" />
-                    <path d="m1640 195v-115h65 65v115 115h-65-65v-115z" />
-                    <path
-                        d="m2170 195v-115h116c92 0 114 3 107 13-5 6-24 32-43 56-23 30-31 47-24 57 5 7 24 34 42 59l33 45h-115-116v-115z" />
-                    <path
-                        d="m2420 195v-115h95 95v39c0 36-3 40-27 44l-28 4 28 2c22 1 27 6 27 26 0 18-5 25-20 25-11 0-20 4-20 9s9 7 20 4c18-5 20 0 20 36v41h-95-95v-115z" />
-                </g>
-            </svg>
-        </picture>
-        <div><i class="fa-solid fa-file-arrow-down"></i>
-            <small>Download Resume</small>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="About me.html">About me</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <hgroup>
-            <h1>Projects</h1>
-            <h4></h4>
-            <p>My portfolio reflects a journey of tackling challenges, collaborating with cross-functional teams, and
-                translating ideas into tangible successes. Explore my work to discover how I've leveraged various
-                developmet tools to create astonishing and measurable results.</p>
-        </hgroup>
-        <div>
-            <section class="finished">
-                <h1>01. Finished Projects</h1>
-                <div id="finished">
-                    <img src="" alt="projects-image">
-                    <video controls src=""></video>
-                    <img src="" alt="projects-image">
-                    <video controls src=""></video>
-                </div>
-            </section>
-            <section class="ongoing">
-                <h1>02. Ongoing Projects</h1>
-                <div id="ongoing">
-                    <div class="ongoing-pro-1">
-                        <h2>Personal Website</h2>
-                        <p>Lorem ipsum dolor sit amet
-                            Quos architecto libero necsint reprehenderit quam fugit deleniti laborum ad quod praesentium
-                            ullam sunt dolore officia molestiae, id culpa iste tempore provident suscipit laudantium
-                            accusamus expedita sequi corporis. Iusto, totam!</p>
-                    </div>
-                    <div class="ongoing-pro-2">
-                        <h2>Personal Website</h2>
-                        <p>Lorem ipsum dolor sit amet
-                            Quos architecto libero necsint reprehenderit quam fugit deleniti laborum ad quod
-                            praesentium
-                            ullam sunt dolore officia molestiae, id culpa iste tempore provident suscipit laudantium
-                            accusamus expedita sequi corporis. Iusto, totam!</p>
-                    </div>
-                    <div class="ongoing-pro-3">
-                        <h2>Personal Website</h2>
-                        <p>Lorem ipsum dolor sit amet
-                            Quos architecto libero necsint reprehenderit quam fugit deleniti laborum ad quod
-                            praesentium
-                            ullam sunt dolore officia molestiae, id culpa iste tempore provident suscipit
-                            laudantium
-                            accusamus expedita sequi corporis. Iusto, totam!</p>
-                    </div>
-                    <div class="ongoing-pro-4">
-                        <h2>Personal Website</h2>
-                        <p>Lorem ipsum dolor sit amet
-                            Quos architecto libero necsint reprehenderit quam fugit deleniti laborum ad quod
-                            praesentium
-                            ullam sunt dolore officia molestiae, id culpa iste tempore provident suscipit
-                            laudantium
-                            accusamus expedita sequi corporis. Iusto, totam!</p>
+<body class="has-text-black">
+    <section class="hero is-link is-fullheight">
+        <div class="hero-head">
+            <header class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <svg class="nav-brand mt-2" width="33%" height="25%" version="1.0" viewBox="0 0 361 130"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g transform="translate(0 130) scale(.1 -.1)">
+                                <path
+                                    d="m1020 851v-371h365 365v360 360h-180-179l-3-131-3-130-170 132c-93 72-176 136-182 142-10 7-13-66-13-362z" />
+                                <path d="m1832 858c3-315 5-363 18-363s15 48 18 363c2 358 2 362-18 362s-20-4-18-362z" />
+                                <path
+                                    d="m1952 858 3-363 353-3c193-1 352 0 352 3s-61 86-135 184l-134 179 111 149c61 81 122 163 136 181l24 32h-356-356l2-362z" />
+                                <path
+                                    d="m668 205c-38-63-68-117-68-120s65-5 144-5h145l-70 118c-38 64-73 118-77 119-4 2-37-49-74-112z" />
+                                <path
+                                    d="m1168 205c-38-63-68-117-68-120s119-5 265-5h265v115 115h-59-60l-3-40-3-39-52 39c-28 22-54 40-57 40s-7-51-8-112l-3-113-69 118c-38 64-72 117-75 117s-36-52-73-115z" />
+                                <path
+                                    d="m1780 201v-121h120 120v121 120l-45-33c-25-18-52-37-59-42-10-7-27-1-56 20-90 64-80 72-80-65z" />
+                                <path
+                                    d="m2630 201v-121h355 355v60 60h-30c-30 0-30 1-30 55v55h-60-59l-3-112-3-113-68 118c-38 64-72 117-76 117s-38-53-76-117l-70-118-3 117-3 118-50-40c-58-46-65-47-99-19-14 11-37 29-52 40l-28 20v-120z" />
+                                <path d="m360 196v-116h115 115v115 115h-60-60v-41-41l-42 34c-72 58-68 62-68-66z" />
+                                <path
+                                    d="m882 253c3-54 5-58 26-55s22 0 22-57v-61h60 60v61c0 56 2 61 20 56s20 0 20 54v59h-105-106l3-57z" />
+                                <path d="m1640 195v-115h65 65v115 115h-65-65v-115z" />
+                                <path
+                                    d="m2170 195v-115h116c92 0 114 3 107 13-5 6-24 32-43 56-23 30-31 47-24 57 5 7 24 34 42 59l33 45h-115-116v-115z" />
+                                <path
+                                    d="m2420 195v-115h95 95v39c0 36-3 40-27 44l-28 4 28 2c22 1 27 6 27 26 0 18-5 25-20 25-11 0-20 4-20 9s9 7 20 4c18-5 20 0 20 36v41h-95-95v-115z" />
+                            </g>
+                        </svg>
+                        <span id="nav-button" class="navbar-burger mt-2 mr-5" data-target="navMenu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
                     </div>
                 </div>
-            </section>
+            </header>
         </div>
-    </main>
-    <footer>
-        <small>Natanim Kemal | 2023</small>
-    </footer>
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title is-1">Projects</h1>
+                <p>My portfolio reflects a sample of the journey of tackling challenges,
+                    collaborating with cross-functional teams, and translating ideas into tangible successes. Explore
+                    my
+                    work to discover how I've leveraged various development tools to create astonishing and measurable
+                    results.</p>
+                <hr class="has-background-grey-lighter">
+                <section class="section">
+                    <h1 class="title is-3">01. Finished Projects</h1>
+                    <div class="columns">
+                        <div id="finished-div-1" class="column">
+                            <a href="https://github.com" class="project__link"><img class="image is-150x150"
+                                    src="images/placeholder.png" alt="projects-image"></a>
+                            <video controls class="project__video" src="#"></video>
+                        </div>
+                        <div id="finished-div-2" class="column">
+                            <a href="https://github.com" class="project__link"><img class="image"
+                                    src="images/placeholder.png" alt="projects-image"></a>
+                            <video controls class="project__video" src="#"></video>
+                        </div>
+                    </div>
+                </section>
+                <hr class="has-background-grey-lighter">
+                <section class="section">
+                    <h1 class="title is-3">02. Ongoing Projects</h1>
+                    <div id="ongoing" class="columns">
+                        <div class="column">
+                            <h2 class="title is-5">Personal Website</h2>
+                            <p class="subtitle is-6">Lorem ipsum dolor sit amet Quos architecto libero necsint
+                                reprehenderit quam fugit deleniti laborum ad quod praesentium ullam sunt dolore officia
+                                molestiae, id culpa iste tempore provident suscipit laudantium accusamus expedita sequi
+                                reprehenderit quam fugit tium ullam sunt dolore officia corporis. Iusto, totam!<a
+                                    class="has-text-success" href="">provident suscipit laudantium</a></p>
+                        </div>
+                        <div class="column">
+                            <h2 class="title is-5">Personal Website</h2>
+                            <p class="subtitle is-6">Lorem ipsum dolor sit amet Quos architecto libero necsint
+                                reprehenderit quam fugit deleniti laborum ad quod praesentium ullam sunt dolore officia
+                                reprehenderit quam fugit deleniti laborum ad quod praesentium ullam sunt dolore officia
+                                molestiae, id culpa iste tempore provident expedita sequi corporis. Iusto, totam!<a
+                                    class="has-text-success" href="">provident suscipit laudantium</a></p>
+                        </div>
+                        <div class="column">
+                            <h2 class="title is-5">Personal Website</h2>
+                            <p class="subtitle is-6">Lorem ipsum dolor sit amet Quos architecto libero necsint
+                                reprehenderit quam fugit deleniti laborum ad quod praesentium ullam sunt dolore officia
+                                reprehenderit quam fugit deleniti laborum ad quod praesentium ullam sunt dolore officia
+                                molestiae, id culpa iste tempore accusamus expedita sequi corporis. Iusto, totam! <a
+                                    class="has-text-success" href="">provident suscipit laudantium</a></p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <footer class=" has-background-dark has-text-centered">
+            <p>
+                <small class="has-text-white">Natanim Kemal | 2023</small>
+            </p>
+        </footer>
+    </section>
 </body>
 
-</html>
+</html
