Fixed link issue (only)

--- a/src/Gallery.html
+++ b/src/Gallery.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
     <title>Gallery</title>
-    <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
+    <link rel="stylesheet" href="/node_modules/bulma/css/bulma.min.css">
 </head>
 
 <body class="hero is-info has-text-black">
     <header class="navbar">
         <div class="container">
             <div class="navbar-brand">
-                <svg class="nav-brand mt-2" width="33%" height="25%" version="1.0" viewBox="0 0 361 130"
+                <svg width="33%" height="25%" version="1.0" viewBox="0 0 361 130"
                     xmlns="http://www.w3.org/2000/svg">
                     <g transform="translate(0 130) scale(.1 -.1)">
                         <path
